fix(material/core): better handling of css variables in theme palettes (#26260)
Technically we don't support theming using CSS variables, but the community has started depending on it anyway since it happened to work. This was broken during the switch to MDC which is blocking users from updating to v15.

These changes make a best effort to avoid all the errors and reduce the amount of warnings as much as possible.

A couple of disclaimers:
* All the places where we were manipulating colors are going to compile now, but they might not look great. This is only going to affect some MDC components though, the legacy components will work as expected.
* One warning might be logged from the themes for components based on MDC's list. They will compile and look acceptable, but I couldn't find a good way to avoid the error with our current setup. We will be able to avoid the warning once we switch the components to the token theming APIs.

Relates to #25981.

(cherry picked from commit f8dd0180cd77b52d980c1ea50b995bb10b9b2d82)

--- a/src/material/chips/_chips-theme.scss
+++ b/src/material/chips/_chips-theme.scss
@@ -1,5 +1,6 @@
 @use 'sass:color';
 @use 'sass:map';
+@use 'sass:meta';
 @use '@material/chips/chip-theme' as mdc-chip-theme;
 @use '@material/chips/chip-set' as mdc-chip-set;
 @use '@material/theme/theme-color' as mdc-theme-color;
@@ -42,9 +43,18 @@
   $is-dark: map.get($config, is-dark);
 
   @include mdc-helpers.using-mdc-theme($config) {
+    $on-surface: mdc-theme-color.prop-value(on-surface);
+    $surface: mdc-theme-color.prop-value(surface);
+
     .mat-mdc-standard-chip {
+      $standard-background: if(
+        meta.type-of($on-surface) == color and meta.type-of($surface) == color,
+        color.mix($on-surface, $surface, 12%),
+        $on-surface
+      );
+
       @include _chip-variant(
-        color.mix(mdc-theme-color.prop-value(on-surface), mdc-theme-color.prop-value(surface), 12%),
+        $standard-background,
         if($is-dark, mdc-color-palette.$grey-50, mdc-color-palette.$grey-900)
       );
 
