--- a/src/material/progress-bar/_progress-bar-theme.scss
+++ b/src/material/progress-bar/_progress-bar-theme.scss
@@ -3,9 +3,12 @@
 @use '@material/theme/theme-color' as mdc-theme-color;
 @use '@material/linear-progress/linear-progress-theme' as mdc-linear-progress-theme;
 @use 'sass:color';
+@use 'sass:meta';
 
 
 @mixin _palette-styles($color) {
+  $color-value: mdc-theme-color.prop-value($color);
+
   // We can't set the `track-color` using `theme`, because it isn't possible for it to use a CSS
   // variable since MDC's buffer animation works by constructing an SVG string from this color.
   @include mdc-linear-progress-theme.theme-styles((
@@ -13,11 +16,15 @@
     // writing, their buffer color is hardcoded to #e6e6e6 which both doesn't account for theming
     // and doesn't match the Material design spec. For now we approximate the buffer background by
     // applying an opacity to the color of the bar.
-    track-color: color.adjust(mdc-theme-color.prop-value($color), $alpha: -0.75),
+    track-color: if(
+      meta.type-of($color-value) == color,
+      color.adjust($color-value, $alpha: -0.75),
+      $color-value
+    ),
   ));
 
   @include mdc-linear-progress-theme.theme((
-    active-indicator-color: mdc-theme-color.prop-value($color),
+    active-indicator-color: $color-value,
   ));
 }
 
